# robserver

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  json.rs  sqlx-cli.Dockerfile
.github/workflows/: build-container.yml  build-image.yml  test.yml
.sqlx/: query-62990b652f9d1daf2d74b6d243ea60087deb02950ac60087376726d16474e4a4.json  query-7a0505050a156b82fb20feaa104f0b738e896754daff504f422e6419dc642c56.json  query-9865ea4fe48f6f57ff4137b6cced8dd8c61395c6667eb0aae3c324fbd2a84581.json  query-d9146684dfdf9ab0fda39909afa6867a3d4ccaeebddc0aee1b1e17dd99d984ea.json  query-edd433e97f136b5abfb765bff92d6a94aba017e79a36b6cd417d5efc4cba6a62.json  query-fc49662934a032fa50d5f0b7a3b0f9b2b936e9c2fdeca82fbc793a7268b2603d.json
containers/: Dockerfile  dev.Dockerfile  sqlx-cli.Dockerfile
migrations/: 20231113141351_initial.sql  20231222130947_add_raw_payload.sql  20240119094643_add_routing_key.sql
scripts/: publish.ts  sqlx-create-run
src/: amqp.rs  config.rs  db.rs  hash.rs  main.rs  payload.rs
src/amqp/: definitions.rs  exchange_subscriber.rs  mod.rs  payload_parser.rs  types.rs
